src/pj/poco/test/neg/NSTRUC09.POC
/* Another questionable use of struct */
#pragma poco echo "expect>expecting name in declaration got 'struct'"

(struct foobar {int foo; char bar;} fb; )

main()
{
puts("This shouldn't compile really");
}
